--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.38.4",
+    "axios": "^1.6.1",
+    "dotenv": "^16.3.1",
     "next": "14.0.1",
     "prettier": "^3.0.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-query": "^3.39.3",
+    "sass": "^1.69.5",
     "styled-components": "^6.1.1"
   },
   "devDependencies": {
