--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
     "@supabase/supabase-js": "^2.38.4",
     "axios": "^1.6.1",
     "dotenv": "^16.3.1",
@@ -20,6 +22,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-query": "^3.39.3",
+    "recoil": "^0.7.7",
     "sass": "^1.69.5",
     "styled-components": "^6.1.1"
   },
